--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 /* GENERAL */
 html {
   box-sizing: border-box;
@@ -19,7 +17,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: "Rubik", "Arial", sans-serif;
   background-color: #fff;
 }
 
@@ -38,7 +36,6 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
 
 /* CONTAINER */
 .container {
@@ -165,6 +162,144 @@ img {
   transition: 0.5s ease;
 }
 
+.features__section {
+  background-image: url("../img/bg-features.png");
+  background-repeat: no-repeat;
+  background-position: calc(-220% + 600px) center;
+}
+
+.features {
+  width: 540px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.features__title {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-style: normal;
+  font-weight: 500px;
+  font-size: 32px;
+  line-height: 52px;
+  text-align: center;
+  letter-spacing: -0.1px;
+  color: #242A45;
+}
+
+.features__content {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #242A45;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+}
+
+.features__list {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom: 2px solid #f2f2f2;
+  width: 730px;
+  padding: 0;
+  margin-top: 72px;
+}
+
+.features__btn {
+  border: none;
+  background-color: #fff;
+}
+
+.features-tabs__item {
+  list-style: none;
+  width: 243px;
+  text-align: center;
+  border-bottom: 3px solid transparent;
+}
+
+.features-tabs__item--active {
+  padding-bottom: 26px;
+  border-bottom-color: tomato;
+}
+
+.features__btn:hover {
+  color: tomato;
+  cursor: pointer;
+}
+
+
+
+
+.features__list {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+.features__btn {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 17px;
+  text-align: center;
+  letter-spacing: 0.533333px;
+  color: #242A45;
+  opacity: 0.75;
+}
+
+.features__btn__speedy{
+  margin-left: 120px;
+  margin-right: 90px;
+}
+
+.features__item {
+  width: 540px;
+  margin-left: auto;
+}
+
+.features__small__title{
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-style: normal;
+  font-weight: 500px;
+  font-size: 32px;
+  line-height: 52px;
+  letter-spacing: -0.1px;
+  color: #242A45
+}
+
+.features__small__content {
+  width: 445px;
+  margin-top: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  color: #242A45;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+  margin-bottom: 32px;
+}
+
+.features__link {
+  padding: 10px 24px;
+  font-style: normal;
+  font-weight: 500px;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  text-decoration: none;
+  background-color: #5267DF;
+  color: #FFFFFF;
+  border-radius: 5px;
+
+}
+
 
 .button {
   display: inline-block;
@@ -194,6 +329,7 @@ img {
   border-color: dodgerblue;
   background-color: transparent;
   color: dodgerblue;
+  transition: 0.3s ease;
 }
 
 .button--red {
@@ -247,11 +383,25 @@ img {
 .extensions__title {
   margin-top: 0;
   margin-bottom: 24px;
+  font-style: normal;
+  font-weight: 500px;
+  font-size: 32px;
+  line-height: 52px;
+  text-align: center;
+  letter-spacing: -0.1px;
+  color: #242A45;
 }
 
 .extensions__desc {
   margin: 0;
-  line-height: 1.5;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #242A45;
+  mix-blend-mode: normal;
+  opacity: 0.5;
 }
 
 .extensions__list {
@@ -335,6 +485,398 @@ img {
   background-size: contain;
   content: "";
 }
+
+.site-bookmark {
+  padding-top: 157px;
+  padding-bottom: 123px;
+  background: url("../img/site-bg-2.png");
+  background-repeat: no-repeat;
+  background-position: left calc(50% - 546px) top calc(-4px);
+  margin-bottom: 80px;
+  margin-top: 127px;
+  display: flex;
+}
+
+.site-bookmark__right{
+  margin-left: 624px;
+  margin-top: -102px;
+}
+
+.hero-bookmark__heading{
+  font-family: 'Rubik',sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 52px;
+  letter-spacing: -0.1px;
+  color: #242A45;
+  padding-bottom: 16px;
+}
+
+.bookmark-right__text{
+  width: 445px;
+  font-family: 'Rubik',sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  color: #242A45;
+  opacity: 0.5;
+}
+
+.button-more{
+margin-top: 32px;
+}
+
+.section-three{
+  margin-bottom: 50px;
+}
+
+.extentions-section__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  margin-left: -36px;
+  padding: 0;
+  margin-top: 42px;
+  padding-bottom: 50px;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+}
+
+.extentions-sections__item {
+  margin-bottom: -48px;
+  margin-left: 36px;
+  padding: 49px 22px 24px 22px;
+  border-radius: 15px;
+  overflow: hidden;
+  width: 300px;
+  background-color: #fff;
+  box-shadow: 0px 10px 20px -5px rgba(73, 93, 207, 0.20012);
+  background-image: url(../img/icon/card-design.svg);
+  background-repeat: no-repeat;
+  background-position: center 265px;
+  transition: opacity 0.3s ease;
+}
+
+.extentions-sections__item:nth-child(3n + 2) {
+  margin-top: 88px;
+}
+
+.extentions-sections__item:nth-child(3n + 3) {
+  margin-top: 155px;
+}
+
+
+.extentions-sections__item:nth-child(1)::before {
+  display: block;
+  margin: 0 auto 32px;
+  content: "";
+  width: 105px;
+  height: 100px;
+  background-image: url("../img/chrome.svg");
+  background-repeat: no-repeat;
+  background-position: 0 center;
+}
+
+.extentions-sections__item:nth-child(2)::before {
+  display: block;
+  margin: 0 auto 32px;
+  content: "";
+  width: 105px;
+  height: 100px;
+  background-image: url("../img/fire-fox.svg");
+  background-repeat: no-repeat;
+  background-position: 0 center;
+}
+
+.extentions-sections__item:nth-child(3)::before {
+  display: block;
+  margin: 0 auto 32px;
+  content: "";
+  width: 105px;
+  height: 100px;
+  background-image: url("../img/opera-mini.svg");
+  background-repeat: no-repeat;
+  background-position: 0 center;
+}
+
+.extentions-sections__item:hover {
+  box-shadow: 0px 10px 15px -8px rgba(73, 93, 207, 0.20012);
+}
+
+.extentions-item__heading {
+  margin: 0 0 6px 0;
+  padding: 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.25px;
+}
+
+.extentions-item__content {
+  margin: 0 0 60px 0;
+  padding: 0;
+  font-size: 15px;
+  line-height: 28px;
+  text-align: center;
+  opacity: 0.5;
+}
+
+.extentions--button {
+  display: block;
+  padding: 10px 35px;
+  letter-spacing: 0.25px;
+  color: #fff;
+  text-decoration: none;
+  background-color: #495fc4;
+  border-radius: 5px;
+  border: 2px solid #5267DF;
+  white-space: nowrap;
+}
+
+.extentions--button:hover {
+  background: #FFFFFF;
+  color: #5267DF;
+  border: 2px solid #5267DF;
+  box-sizing: border-box;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+}
+
+.questions__heading{
+  max-width: 540px;
+}
+
+.questions__list{
+  max-width: 540px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 56px;
+}
+.questions__item--wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 20px;
+  position: relative;
+  border-top: 2px solid  rgb(226, 226, 226);
+  padding-top: 20px;
+}
+.questions__item--title{
+  font-family: 'Rubik',sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 32px;
+  text-align: center;
+  color: #242A45;
+}
+
+.questions__item--button{
+  display: block;
+  width: 100%;
+  height: 15px;
+  background-color: transparent;
+  background-image: url("../img/down-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
+  border: none;
+  cursor: pointer;
+  flex-grow: 1;
+  position: absolute;
+  margin-left: -17px;
+}
+.questions__item--dropdown{
+  display: none;
+}
+.questions__item--active .questions__item--dropdown{
+  display: block;
+  padding-bottom: 20px;
+}
+
+.questions__item--down{
+  border-bottom: 2px solid  rgb(226, 226, 226);
+  margin-bottom: 54px;
+}
+
+.btn{
+  text-decoration: none;
+  padding: 10px 24px;
+  color: #fff;
+  background: #5267DF;
+  border: 2px solid #5267DF;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+  border-radius: 5px;
+  transition: all 0.5s ease;
+}
+
+.btn:hover{
+  background-color: #fff;
+  color: #5267DF;
+  border: 2px solid #5267DF;
+  border-radius: 5px;
+}
+
+.more-info{
+  margin-top: 54px;
+  margin-bottom: 150px;
+  margin-left: 220px;
+}
+
+.section__down{
+  background-color: rgba(82, 103, 223, 1);
+
+}
+
+.down-title__text{
+  font-family: 'Rubik',sans-serif;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: 5px;
+  color: #FFFFFF;
+  padding-top: 58px;
+}
+
+.down-title__heading{
+  padding: 0;
+  width: 408px;
+  font-family: 'Rubik',sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: -0.1px;
+  color: #FFFFFF;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 24px;
+}
+
+.section__form{
+  display: flex;
+  justify-content: center;
+  margin-top: 36px;
+  padding-bottom: 53px;
+}
+
+.email__item{
+  padding: 10px 112px 10px 24px;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  color: rgb(0, 0, 0);
+  border: 2px solid transparent;
+}
+
+.form__contact{
+  /* width: 126px; */
+  height: 48px;
+  margin-left: 16px;
+  padding: 10px 24px;
+  background-color: #FA5959;
+  color: #fff;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: 0.25px;
+  border: none;
+  transition: all 0.5s ease;
+  border-radius: 5px;
+  border: 2px solid #FA5959;
+}
+
+.form__contact:hover{
+  border: 2px solid #FA5959;
+  background-color: #fff;
+  color: #FA5959;
+}
+
+.email__item:not(:placeholder-shown):not(:focus):invalid{
+  background-image: url("../img/error.svg");
+  background-repeat: no-repeat;
+  border-color: tomato;
+  background-position:right 16px center;
+}
+
+.form__span{
+  display: none;
+  font-family: 'Rubik',sans-serif;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 12px;
+  letter-spacing: 0.25px;
+  color: #FFFFFF;
+}
+
+input:not(:placeholder-shown):not(:focus):invalid ~ .form__span {
+  display: flex;
+  color: #fff;
+  padding: 4px 128px 6px 12px;
+  border: 2px solid transparent;
+  background-color: #FA5959;
+}
+
+.footer{
+  background-color:  #242A45;
+}
+
+.footer-middle{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 35px 0;
+}
+
+.footer__img{
+  display: flex;
+}
+
+.footer__item{
+  list-style: none;
+}
+
+.footer-icon{
+  display: flex;
+
+}
+
+.footer__link{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: 'Rubik',sans-serif;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 17px;
+  letter-spacing: 1.5px;
+  color: #FFFFFF;
+  margin-left: 45px;
+  transition: all 0.5s ease;
+}
+
+.footer__link:hover{
+  color: #FA5959;
+}
+
+.contacts{
+  margin-right: 0;
+}
+
+.facebook-icon{
+  margin-right: 40px;
+}
+
 
 /* @media
   only screen and (-webkit-min-device-pixel-ratio: 2),
